# introduction-to-fastapi

./: .tool-versions  README.md  pyproject.toml
src/introduction_to_fastapi/: data.py  main.py  models.py
