[project]
name = "introduction-to-fastapi"
version = "0.1.0"
description = "A simple introduction to FastAPI"
authors = [
    {name = "refactorartist", email = "thefattman@refactorart.ist"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
